--- a/index.html
+++ b/index.html
@@ -105,37 +105,36 @@
 
 			<div class="projectContainer row">
 
-				<div class="blog dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
-					<div class="card h-100">
-							<img class="card-img-top" src="images/icons/easiest_ANN.jpg" alt="Easiest_ANN">
-						</a>
-						<div class="card-body">
-							<h4 class="card-title">
-								<center>
-									<h4 class="card-title">Demystifying the Basics of ANN</h4>
-								</center>
-							</h4>
-							<center>
-								<p class="card-text">with the least amount of maths</p>
-							</center>
-							<br>
-							<ul style="list-style-type:square; text-align:left;">
-									<li>Medium</li>
-									<li>Date : Jan 2019</li>
-							</ul>
-							<br>
-
-							<div class="link_button">
-								<a href="https://medium.com/p/the-most-intuitive-and-easiest-guide-for-artificial-neural-network-6a3f2bc0eecb?source=email-1df293b5ca56--writer.postDistributed&sk=a9021d009dcd1651c16b59c6e48d0533">
+					<div class="blog dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
+						<div class="card h-100">
+								<img class="card-img-top" src="images/icons/easiest_ANN.jpg" alt="Easiest_ANN">
+							</a>
+							<div class="card-body">
+								<h4 class="card-title">
 									<center>
-										<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/medium.png" alt="Medium" width="120" height="40">
+										<h4 class="card-title">Demystifying the Basics of ANN</h4>
 									</center>
-								</a>
+								</h4>
+								<center>
+									<p class="card-text">with the least amount of maths</p>
+								</center>
+								<br>
+								<ul style="list-style-type:square; text-align:left;">
+										<li>Medium</li>
+										<li>Date : Jan 2019</li>
+								</ul>
+								<br>
+
+								<div class="link_button">
+									<a href="https://medium.com/p/the-most-intuitive-and-easiest-guide-for-artificial-neural-network-6a3f2bc0eecb?source=email-1df293b5ca56--writer.postDistributed&sk=a9021d009dcd1651c16b59c6e48d0533">
+										<center>
+											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/medium.png" alt="Medium" width="120" height="40">
+										</center>
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-
 
 					<div class="blog dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
@@ -144,11 +143,11 @@
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
-										<h4 class="card-title">How I Finished DL Speacialization in 4 Weeks</h4>
+										<h4 class="card-title">How I Finished the DL Speacialization in 4 Weeks</h4>
 									</center>
 								</h4>
 								<center>
-									<p class="card-text">My secret of learning DS</p>
+									<p class="card-text">my secret of learning DS</p>
 								</center>
 								<br>
 								<ul style="list-style-type:square; text-align:left;">
@@ -202,7 +201,6 @@
 						</div>
 					</div>
 
-
 					<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
 							<a href="https://towardsdatascience.com/strategies-to-be-a-successful-youtuber-extensive-youtube-exploratory-analysis-part-1-2-40eee29554e6">
@@ -237,30 +235,31 @@
 						</div>
 					</div>
 
-					<div class="dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
+					<div class="ml col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
-								<img class="card-img-top" src="images/icons/deeplearning_ai.jpg" alt="deeplearning_ai">
+							<a href="https://towardsdatascience.com/who-is-your-golden-goose-cohort-analysis-50c9de5dbd31">
+								<img class="card-img-top" src="images/icons/cohort.jpg" alt="cohort">
 							</a>
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
-										<h4 class="card-title">Deep Learning Speacialization</h4>
+										<h4 class="card-title">Cohort Analysis</h4>
 									</center>
 								</h4>
 								<center>
-									<p class="card-text">with code assignments</p>
+									<p class="card-text">with RFM & K-Means clustering</p>
 								</center>
 								<br>
-			 		 		  <ul style="list-style-type:square; text-align:left;">
+						   	<ul style="list-style-type:square; text-align:left;">
 									<li>Python</li>
-									<li>Certifications</li>
+									<li>Visualization</li>
 									<li>Medium</li>
-									<li>Date : Jan 2019</li>
+									<li>Date : Dec 2018</li>
 								</ul>
 								<br>
 
 								<div class="link_button">
-									<a href="https://github.com/jjone36/Coursera_deeplearning_ai">
+									<a href="https://github.com/jjone36/Cohort">
 										<center>
 											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
 										</center>
@@ -294,40 +293,6 @@
 									<a href="https://towardsdatascience.com/what-is-api-and-how-to-use-youtube-api-65525744f520">
 										<center>
 											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/medium.png" alt="Medium" width="120" height="40">
-										</center>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="ml col-lg-3 col-md-4 col-sm-6 portfolio-item">
-						<div class="card h-100">
-							<a href="https://towardsdatascience.com/who-is-your-golden-goose-cohort-analysis-50c9de5dbd31">
-								<img class="card-img-top" src="images/icons/cohort.jpg" alt="cohort">
-							</a>
-							<div class="card-body">
-								<h4 class="card-title">
-									<center>
-										<h4 class="card-title">Cohort Analysis</h4>
-									</center>
-								</h4>
-								<center>
-									<p class="card-text">with RFM & K-Means clustering</p>
-								</center>
-								<br>
-						   	<ul style="list-style-type:square; text-align:left;">
-									<li>Python</li>
-									<li>Visualization</li>
-									<li>Medium</li>
-									<li>Date : Dec 2018</li>
-								</ul>
-								<br>
-
-								<div class="link_button">
-									<a href="https://github.com/jjone36/Cohort">
-										<center>
-											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
 										</center>
 									</a>
 								</div>
@@ -394,6 +359,39 @@
 
 								<div class="link_button">
 									<a href="https://github.com/jjone36/lyrics">
+										<center>
+											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
+										</center>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
+						<div class="card h-100">
+								<img class="card-img-top" src="images/icons/deeplearning_ai.jpg" alt="deeplearning_ai">
+							</a>
+							<div class="card-body">
+								<h4 class="card-title">
+									<center>
+										<h4 class="card-title">Deep Learning Speacialization</h4>
+									</center>
+								</h4>
+								<center>
+									<p class="card-text">with code assignments</p>
+								</center>
+								<br>
+								<ul style="list-style-type:square; text-align:left;">
+									<li>Python</li>
+									<li>Certifications</li>
+									<li>Medium</li>
+									<li>Date : Jan 2019</li>
+								</ul>
+								<br>
+
+								<div class="link_button">
+									<a href="https://github.com/jjone36/Coursera_deeplearning_ai">
 										<center>
 											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
 										</center>
