--- a/index.html
+++ b/index.html
@@ -105,6 +105,38 @@
 
 			<div class="projectContainer row">
 
+					<div class="ml col-lg-3 col-md-4 col-sm-6 portfolio-item">
+						<div class="card h-100">
+								<img class="card-img-top" src="images/icons/app.jpg" alt="app">
+							</a>
+							<div class="card-body">
+								<h4 class="card-title">
+									<center>
+										<h4 class="card-title">Market Research</h4>
+									</center>
+								</h4>
+								<center>
+									<p class="card-text">in progress</p>
+								</center>
+								<br>
+								<ul style="list-style-type:square; text-align:left;">
+										<li>Python</li>
+										<li>Date : Jan 2019</li>
+								</ul>
+								<br>
+
+								<div class="link_button">
+									<a href="https://github.com/jjone36/Apps">
+										<center>
+											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
+										</center>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+
 					<div class="blog dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
 								<img class="card-img-top" src="images/icons/easiest_ANN.jpg" alt="Easiest_ANN">
@@ -143,7 +175,7 @@
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
-										<h4 class="card-title">How I Finished the DL Speacialization in 4 Weeks</h4>
+										<h4 class="card-title">How I Finished   DL Speacialization in 4 Weeks</h4>
 									</center>
 								</h4>
 								<center>
