linkedin URL edit

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 				<a class='icon icon-email' target="_blank" href="mailto:jiwon.j306@gmail.com">
 					<i class="fas fa-envelope fa-3x"></i>
 				</a>
-				<a class='icon' target="_blank" href="https://www.linkedin.com/in/jiwon-jeong36/">
+				<a class='icon' target="_blank" href="https://www.linkedin.com/in/jiwon-jeong/">
 						<i class="fab fa-linkedin fa-3x"></i>
 				</a>
 				<a class='icon' target="_blank" href="https://github.com/jjone36">
