doodle project add

--- a/index.html
+++ b/index.html
@@ -105,28 +105,29 @@
 
 			<div class="projectContainer row">
 
-					<div class="ml col-lg-3 col-md-4 col-sm-6 portfolio-item">
+					<div class="dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
-								<img class="card-img-top" src="images/icons/app.jpg" alt="app">
+								<img class="card-img-top" src="images/icons/doodle.png" alt="doodle">
 							</a>
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
-										<h4 class="card-title">Market Research</h4>
+										<h4 class="card-title">Quick Draw: Catch doodle!</h4>
 									</center>
 								</h4>
 								<center>
-									<p class="card-text">in progress</p>
+									<p class="card-text">with 50 animals</p>
 								</center>
 								<br>
 								<ul style="list-style-type:square; text-align:left;">
 										<li>Python</li>
+										<li>Image Classification</li>
 										<li>Date : Jan 2019</li>
 								</ul>
 								<br>
 
 								<div class="link_button">
-									<a href="https://github.com/jjone36/Apps">
+									<a href="https://github.com/jjone36/Doodle">
 										<center>
 											<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
 										</center>
