--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 								<br>
 								<ul style="list-style-type:square; text-align:left;">
 										<li>Python</li>
-										<li>Image Classification</li>
+										<li>Image Processing</li>
 										<li>Date : Jan 2019</li>
 								</ul>
 								<br>
@@ -144,7 +144,7 @@
 								<div class="card-body">
 									<h4 class="card-title">
 										<center>
-											<h4 class="card-title">Demystifying the Basics of ANN</h4>
+											<h4 class="card-title">The Easiest guide for Neural Networks</h4>
 										</center>
 									</h4>
 									<center>
@@ -153,6 +153,7 @@
 									<br>
 									<ul style="list-style-type:square; text-align:left;">
 											<li>Medium</li>
+											<li>ANN, CNN and RNN</li>
 											<li>Date : Jan 2019</li>
 									</ul>
 									<br>
@@ -199,30 +200,31 @@
 							</div>
 						</div>
 
-						<div class="dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
+						<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
 							<div class="card h-100">
-									<img class="card-img-top" src="images/icons/deeplearning_ai.jpg" alt="deeplearning_ai">
+								<a href="https://towardsdatascience.com/for-your-skin-beauty-mapping-cosmetic-items-with-bokeh-af7523ca68e5">
+									<img class="card-img-top" src="images/icons/cosmetic.jpg" alt="cosmetic">
 								</a>
 								<div class="card-body">
 									<h4 class="card-title">
 										<center>
-											<h4 class="card-title">Deep Learning Speacialization</h4>
+											<h4 class="card-title">Cosmetic Recommendation</h4>
 										</center>
 									</h4>
 									<center>
-										<p class="card-text">with code assignments</p>
+										<p class="card-text">with word embedding</p>
 									</center>
 									<br>
 									<ul style="list-style-type:square; text-align:left;">
 										<li>Python</li>
-										<li>Certifications</li>
+										<li>Web Scraping</li>
 										<li>Medium</li>
-										<li>Date : Jan 2019</li>
+										<li>Date : Nov 2018</li>
 									</ul>
 									<br>
 
 									<div class="link_button">
-										<a href="https://github.com/jjone36/Coursera_deeplearning_ai">
+										<a href="https://github.com/jjone36/Cosmetic">
 											<center>
 												<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
 											</center>
@@ -231,7 +233,6 @@
 								</div>
 							</div>
 						</div>
-
 
 						<div class="ml col-lg-3 col-md-4 col-sm-6 portfolio-item">
 							<div class="card h-100">
@@ -258,40 +259,6 @@
 
 									<div class="link_button">
 										<a href="https://github.com/jjone36/Cohort">
-											<center>
-												<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
-											</center>
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="ml nlp col-lg-3 col-md-4 col-sm-6 portfolio-item">
-							<div class="card h-100">
-								<a href="https://towardsdatascience.com/for-your-skin-beauty-mapping-cosmetic-items-with-bokeh-af7523ca68e5">
-									<img class="card-img-top" src="images/icons/cosmetic.jpg" alt="cosmetic">
-								</a>
-								<div class="card-body">
-									<h4 class="card-title">
-										<center>
-											<h4 class="card-title">Cosmetic Recommendation</h4>
-										</center>
-									</h4>
-									<center>
-										<p class="card-text">with word embedding</p>
-									</center>
-									<br>
-						  		<ul style="list-style-type:square; text-align:left;">
-										<li>Python</li>
-										<li>Web Scraping</li>
-										<li>Medium</li>
-										<li>Date : Nov 2018</li>
-									</ul>
-									<br>
-
-									<div class="link_button">
-										<a href="https://github.com/jjone36/Cosmetic">
 											<center>
 												<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
 											</center>
@@ -425,6 +392,39 @@
 
 									<div class="link_button">
 										<a href="https://github.com/jjone36/lyrics">
+											<center>
+												<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
+											</center>
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
+							<div class="card h-100">
+									<img class="card-img-top" src="images/icons/deeplearning_ai.jpg" alt="deeplearning_ai">
+								</a>
+								<div class="card-body">
+									<h4 class="card-title">
+										<center>
+											<h4 class="card-title">Deep Learning Speacialization</h4>
+										</center>
+									</h4>
+									<center>
+										<p class="card-text">with code assignments</p>
+									</center>
+									<br>
+									<ul style="list-style-type:square; text-align:left;">
+										<li>Python</li>
+										<li>Certifications</li>
+										<li>Medium</li>
+										<li>Date : Jan 2019</li>
+									</ul>
+									<br>
+
+									<div class="link_button">
+										<a href="https://github.com/jjone36/Coursera_deeplearning_ai">
 											<center>
 												<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
 											</center>
