--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
-										<h4 class="card-title">Quick Draw: Catch doodle!</h4>
+										<h4 class="card-title">Quick Draw: Catch doodle!🐱🐼🐷</h4>
 									</center>
 								</h4>
 								<center>
@@ -144,13 +144,12 @@
 								<div class="card-body">
 									<h4 class="card-title">
 										<center>
-											<h4 class="card-title">The Easiest guide for Neural Networks</h4>
+											<h4 class="card-title">The Easiest Guide for Neural Networks</h4>
 										</center>
 									</h4>
 									<center>
 										<p class="card-text">with the least amount of maths</p>
 									</center>
-									<br>
 									<ul style="list-style-type:square; text-align:left;">
 											<li>Medium</li>
 											<li>ANN, CNN and RNN</li>
