--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
-										<h4 class="card-title">Quick Draw: Catch doodle!🐱🐼🐷</h4>
+										<h4 class="card-title">Quick Draw🐶🐼🐷 Catch doodle!</h4>
 									</center>
 								</h4>
 								<center>
