twitter added & image resize

--- a/contact.html
+++ b/contact.html
@@ -64,8 +64,8 @@
 				<a class='icon icon-email' target="_blank" href="mailto:jiwon.j306@gmail.com">
 					<i class="fas fa-envelope fa-3x"></i>
 				</a>
-				<a class='icon' target="_blank" href="https://www.linkedin.com/in/jiwon-jeong/">
-						<i class="fab fa-linkedin fa-3x"></i>
+				<a class='icon' target="_blank" href="https://twitter.com/jjone_36">
+					<i class="fab fa-twitter fa-3x"></i>
 				</a>
 				<a class='icon' target="_blank" href="https://github.com/jjone36">
 					<i class="fab fa-github fa-3x"></i>
@@ -73,8 +73,8 @@
 				<a class='icon' target="_blank" href="https://www.instagram.com/jjone36/">
 					<i class="fab fa-instagram fa-3x"></i>
 	 			</a>
-				<a class='icon icon-medium' target="_blank" href="https://medium.com/@jiwon.jeong">
-					<i class="fab fa-medium fa-3x"></i>
+				<a class='icon' target="_blank" href="https://www.linkedin.com/in/jiwon-jeong/">
+					<i class="fab fa-linkedin fa-3x"></i>
 				</a>
 
 				<br>
