--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<meta name="description" content="Jiwon Jeong - Portfolio; Data Scince, Machine Learning, Statistical Analysis, AI, Mathematics, Data Visualisation">
-		<meta name="keywords" content="ai, software, programming, computers, python, R, artificial intelligence, computer, it, machine learning, Statistical Analysis, statistics">
+		<meta name="description" content="Jiwon Jeong - Portfolio; Data Scince, Machine Learning, Artificial intelligence, Statistical Analysis, Data Visualisation">
+		<meta name="keywords" content="ai, software, programming, computers, python, R, artificial intelligence, computer, it, machine learning, statistics">
 		<meta name="author" content="Jiwon Jeong">
 
 		<title>Jiwon Jeong - Portfolio</title>
@@ -64,8 +64,8 @@
 				<a class='icon icon-email' target="_blank" href="mailto:jiwon.j306@gmail.com">
 					<i class="fas fa-envelope fa-3x"></i>
 				</a>
-				<a class='icon' target="_blank" href="https://www.linkedin.com/in/jiwon-jeong/">
-						<i class="fab fa-linkedin fa-3x"></i>
+				<a class='icon' target="_blank" href="https://twitter.com/jjone_36">
+					<i class="fab fa-twitter fa-3x"></i>
 				</a>
 				<a class='icon' target="_blank" href="https://github.com/jjone36">
 					<i class="fab fa-github fa-3x"></i>
@@ -73,8 +73,8 @@
 				<a class='icon' target="_blank" href="https://www.instagram.com/jjone36/">
 					<i class="fab fa-instagram fa-3x"></i>
 	 			</a>
-				<a class='icon icon-medium' target="_blank" href="https://medium.com/@jiwon.jeong">
-					<i class="fab fa-medium fa-3x"></i>
+				<a class='icon' target="_blank" href="https://www.linkedin.com/in/jiwon-jeong/">
+					<i class="fab fa-linkedin fa-3x"></i>
 				</a>
 
 				<br>
@@ -112,7 +112,7 @@
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
-										<h4 class="card-title">Quick Draw🐶🐼🐷 Catch doodle!</h4>
+										<h4 class="card-title">Quick Draw🐶🐼 Catch doodle!</h4>
 									</center>
 								</h4>
 								<center>
