--- a/contact.html
+++ b/contact.html
@@ -91,10 +91,17 @@
 				<p class="lead text-center" style="font-size:23px">
 						music🎧, art gallery🎨, and regular gym workout💪
 					</p>
-				<p class="lead text-center" style="font-size:23px">
+				<p class="lead text-center" style="font-size:23px;margin-bottom:1cm">
 					 Feel free to contact me!
 					</p>
+				<center>
+					<img src="images/prague.jpg" alt="prague" style="margin-bottom:5cm">
+				</center>
+				
+				<br>
+				<br>
 			</div>
+
 
 	</div>
 		<div class="fixed-bottom">
