--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						Hi, there!
 					</p>
 				<p class="lead text-center" style="font-size:23px">
-						I'm a data science enthusiast, a Master's degree candidate and a writer on Medium 😍
+						I'm a data science researcher, a Master's degree candidate and a writer on Medium 😍
 					</p>
 			</div>
 
@@ -440,7 +440,7 @@
 								<div class="card-body">
 									<h4 class="card-title">
 										<center>
-											<h4 class="card-title">Template</h4>
+											<h4 class="card-title">Code Template</h4>
 										</center>
 									</h4>
 									<center>
