--- a/index.html
+++ b/index.html
@@ -105,10 +105,42 @@
 
 			<div class="projectContainer row">
 
+				<div class="blog col-lg-3 col-md-4 col-sm-6 portfolio-item">
+					<div class="card h-100">
+						<a href="https://towardsdatascience.com/computer-vision-for-beginners-part-1-7cca775f58ef?source=friends_link&sk=be2c1c3e90bbef2db559cc0e1f3198b9">
+							<img class="card-img-top" src="images/icons/vision.jpg" alt="vision">
+						</a>
+						<div class="card-body">
+							<h4 class="card-title">
+								<center>
+									<h4 class="card-title">Image Processing with OpenCV</h4>
+								</center>
+							</h4>
+							<center>
+								<p class="card-text">From basic to advanced</p>
+							</center>
+							<br>
+							<ul style="list-style-type:square; text-align:left;">
+									<li>Image Fitering</li>
+									<li>Feature Detection</li>
+									<li>Image Segmentation</li>
+									<li>Date : Mar 2019</li>
+							</ul>
+							<br>
+
+							<div class="link_button">
+								<a href="https://github.com/jjone36/vision_4_beginners">
+									<center>
+										<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
 					<div class="dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
 						<div class="card h-100">
 								<img class="card-img-top" src="images/icons/doodle.png" alt="doodle">
-							</a>
 							<div class="card-body">
 								<h4 class="card-title">
 									<center>
@@ -121,7 +153,8 @@
 								<br>
 								<ul style="list-style-type:square; text-align:left;">
 										<li>Python</li>
-										<li>Image Processing</li>
+										<li>Classification</li>
+										<li>Keras</li>
 										<li>Date : Jan 2019</li>
 								</ul>
 								<br>
@@ -140,7 +173,6 @@
 						<div class="blog dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
 							<div class="card h-100">
 									<img class="card-img-top" src="images/icons/easiest_ANN.jpg" alt="Easiest_ANN">
-								</a>
 								<div class="card-body">
 									<h4 class="card-title">
 										<center>
@@ -171,7 +203,6 @@
 						<div class="blog dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
 							<div class="card h-100">
 									<img class="card-img-top" src="images/icons/he.gif" alt="he">
-								</a>
 								<div class="card-body">
 									<h4 class="card-title">
 										<center>
