--- a/index.html
+++ b/index.html
@@ -266,6 +266,38 @@
 
 						<div class="ml col-lg-3 col-md-4 col-sm-6 portfolio-item">
 							<div class="card h-100">
+								<img class="card-img-top" src="images/icons/dash.jpg" alt="dash">
+								<div class="card-body">
+									<h4 class="card-title">
+										<center>
+											<h4 class="card-title">Dash by Plotly</h4>
+										</center>
+									</h4>
+									<center>
+										<p class="card-text">Another stage of Visz</p>
+									</center>
+									<br>
+									<ul style="list-style-type:square; text-align:left;">
+										<li>Python</li>
+										<li>Visualization</li>
+										<li>Medium</li>
+										<li>Date : Mar 2019</li>
+									</ul>
+									<br>
+
+									<div class="link_button">
+										<a href="https://towardsdatascience.com/a-gentle-invitation-to-interactive-visualization-with-dash-a200427ccce9">
+											<center>
+												<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/medium.png" alt="Medium" width="120" height="40">
+											</center>
+										</a>
+									</div>
+							 	</div>
+							</div>
+						</div>
+
+						<div class="ml col-lg-3 col-md-4 col-sm-6 portfolio-item">
+							<div class="card h-100">
 								<a href="https://towardsdatascience.com/who-is-your-golden-goose-cohort-analysis-50c9de5dbd31">
 									<img class="card-img-top" src="images/icons/cohort.jpg" alt="cohort">
 								</a>
