add hacathon & TMDB

--- a/index.html
+++ b/index.html
@@ -105,6 +105,69 @@
 
 			<div class="projectContainer row">
 
+				<div class="ml col-lg-3 col-md-4 col-sm-6 portfolio-item">
+					<div class="card h-100">
+							<img class="card-img-top" src="images/icons/tmdb.png" alt="tmdb">
+						<div class="card-body">
+							<h4 class="card-title">
+								<center>
+									<h4 class="card-title">Predicting Box Office Revenue</h4>
+								</center>
+							</h4>
+							<center>
+								<p class="card-text">With TMDB</p>
+							</center>
+							<br>
+							<ul style="list-style-type:square; text-align:left;">
+									<li>Python</li>
+									<li>Kaggle Competition</li>
+									<li>Date : May 2019</li>
+							</ul>
+							<br>
+
+							<div class="link_button">
+								<a href="https://github.com/jjone36/tmdb">
+									<center>
+										<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
+									</center>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
+					<div class="card h-100">
+							<img class="card-img-top" src="images/icons/junx.jpg" alt="junx">
+						<div class="card-body">
+							<h4 class="card-title">
+								<center>
+									<h4 class="card-title">The App, Skana</h4>
+								</center>
+							</h4>
+							<center>
+								<p class="card-text">At JunctionX Hackathon</p>
+							</center>
+							<br>
+							<ul style="list-style-type:square; text-align:left;">
+									<li>Naver Cloud</li>
+									<li>Database</li>
+									<li>OCR Image Search</li>
+									<li>Date : May 2019</li>
+							</ul>
+							<br>
+
+							<div class="link_button">
+								<a href="https://devpost.com/software/skana#_=_">
+									<center>
+										<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/dev.png" alt="dev" width="120" height="40">
+									</center>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
 				<div class="blog col-lg-3 col-md-4 col-sm-6 portfolio-item">
 					<div class="card h-100">
 						<a href="https://towardsdatascience.com/computer-vision-for-beginners-part-1-7cca775f58ef?source=friends_link&sk=be2c1c3e90bbef2db559cc0e1f3198b9">
