--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 								</center>
 							</h4>
 							<center>
-								<p class="card-text">With TMDB</p>
+								<p class="card-text">with TMDB</p>
 							</center>
 							<br>
 							<ul style="list-style-type:square; text-align:left;">
@@ -146,7 +146,7 @@
 								</center>
 							</h4>
 							<center>
-								<p class="card-text">At JunctionX Hackathon</p>
+								<p class="card-text">at JunctionX Hackathon</p>
 							</center>
 							<br>
 							<ul style="list-style-type:square; text-align:left;">
@@ -180,7 +180,7 @@
 								</center>
 							</h4>
 							<center>
-								<p class="card-text">From basic to advanced</p>
+								<p class="card-text">from basic to advanced</p>
 							</center>
 							<br>
 							<ul style="list-style-type:square; text-align:left;">
@@ -195,6 +195,68 @@
 								<a href="https://github.com/jjone36/vision_4_beginners">
 									<center>
 										<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="ml dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
+					<div class="card h-100">
+							<img class="card-img-top" src="images/icons/minion.png" alt="minion">
+						<div class="card-body">
+							<h4 class="card-title">
+								<center>
+									<h4 class="card-title">Recommendation Systems</h4>
+								</center>
+							</h4>
+							<center>
+								<p class="card-text">all from scrach</p>
+							</center>
+							<br>
+							<ul style="list-style-type:square; text-align:left;">
+									<li>Collaborative Filtering</li>
+									<li>Matrix Factorization</li>
+									<li>RBMs</li>
+									<li>Date : Jun 2019</li>
+							</ul>
+							<br>
+
+							<div class="link_button">
+								<a href="https://github.com/jjone36/Recommender">
+									<center>
+										<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/github.png" alt="GitHub" width="120" height="40">
+									</center>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				
+				<div class="blog dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
+					<div class="card h-100">
+							<img class="card-img-top" src="images/icons/easiest_ANN.jpg" alt="Easiest_ANN">
+						<div class="card-body">
+							<h4 class="card-title">
+								<center>
+									<h4 class="card-title">The Easiest Guide for Neural Networks</h4>
+								</center>
+							</h4>
+							<center>
+								<p class="card-text">with the least amount of maths</p>
+							</center>
+							<ul style="list-style-type:square; text-align:left;">
+									<li>Medium</li>
+									<li>ANN, CNN and RNN</li>
+									<li>Date : Jan 2019</li>
+							</ul>
+							<br>
+
+							<div class="link_button">
+								<a href="https://medium.com/p/the-most-intuitive-and-easiest-guide-for-artificial-neural-network-6a3f2bc0eecb?source=email-1df293b5ca56--writer.postDistributed&sk=a9021d009dcd1651c16b59c6e48d0533">
+									<center>
+										<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/medium.png" alt="Medium" width="120" height="40">
+									</center>
 								</a>
 							</div>
 						</div>
@@ -232,36 +294,6 @@
 						  	</div>
 					  	</div>
 			  		</div>
-
-						<div class="blog dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
-							<div class="card h-100">
-									<img class="card-img-top" src="images/icons/easiest_ANN.jpg" alt="Easiest_ANN">
-								<div class="card-body">
-									<h4 class="card-title">
-										<center>
-											<h4 class="card-title">The Easiest Guide for Neural Networks</h4>
-										</center>
-									</h4>
-									<center>
-										<p class="card-text">with the least amount of maths</p>
-									</center>
-									<ul style="list-style-type:square; text-align:left;">
-											<li>Medium</li>
-											<li>ANN, CNN and RNN</li>
-											<li>Date : Jan 2019</li>
-									</ul>
-									<br>
-
-									<div class="link_button">
-										<a href="https://medium.com/p/the-most-intuitive-and-easiest-guide-for-artificial-neural-network-6a3f2bc0eecb?source=email-1df293b5ca56--writer.postDistributed&sk=a9021d009dcd1651c16b59c6e48d0533">
-											<center>
-												<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/medium.png" alt="Medium" width="120" height="40">
-											</center>
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
 
 						<div class="blog dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
 							<div class="card h-100">
@@ -337,7 +369,7 @@
 										</center>
 									</h4>
 									<center>
-										<p class="card-text">Another stage of Visz</p>
+										<p class="card-text">another stage of Visz</p>
 									</center>
 									<br>
 									<ul style="list-style-type:square; text-align:left;">
