add cv tag & resume page

--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,8 @@
 				  			<a class="nav-link" href="/">Portfolio</a>
 						<li class="nav-item active">
 				  			<a class="nav-link" href="/contact">About Me</a>
+						<li class="nav-item">
+							<a class="nav-link" href="https://docs.google.com/document/d/1AIg9H5UnEmksbKUfNINtiDtYF1uPelRVu4ir07Gg244/edit?usp=sharing">Resume</a>
 						</li>
 			  		</ul>
 				</div>
@@ -97,7 +99,7 @@
 				<center>
 					<img src="images/prague.jpg" alt="prague" style="margin-bottom:5cm">
 				</center>
-				
+
 				<br>
 				<br>
 			</div>
