--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 									<h4 class="card-title">The App, Skana</h4>
 								</center>
 							</h4>
+							<br>
 							<center>
 								<p class="card-text">at JunctionX Hackathon</p>
 							</center>
@@ -155,7 +156,7 @@
 							<ul style="list-style-type:square; text-align:left;">
 									<li>Naver Cloud</li>
 									<li>Database</li>
-									<li>OCR Image Search</li>
+									<li>Computer Vision</li>
 									<li>Date : May 2019</li>
 							</ul>
 							<br>
@@ -171,7 +172,7 @@
 					</div>
 				</div>
 
-				<div class="cv blog col-lg-3 col-md-4 col-sm-6 portfolio-item">
+				<div class="cv blog dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
 					<div class="card h-100">
 						<a href="https://towardsdatascience.com/computer-vision-for-beginners-part-1-7cca775f58ef?source=friends_link&sk=be2c1c3e90bbef2db559cc0e1f3198b9">
 							<img class="card-img-top" src="images/icons/vision.jpg" alt="vision">
@@ -298,7 +299,7 @@
 					  	</div>
 			  		</div>
 
-						<div class="blog dl col-lg-3 col-md-4 col-sm-6 portfolio-item">
+						<div class="blog col-lg-3 col-md-4 col-sm-6 portfolio-item">
 							<div class="card h-100">
 									<img class="card-img-top" src="images/icons/he.gif" alt="he">
 								<div class="card-body">
