--- a/contact.html
+++ b/contact.html
@@ -81,20 +81,26 @@
 
 				<br>
 				<br>
-				<p class="lead text-center" style="font-size:23px">
-						Hi, I'm Jiwon
+				<p class="lead text-center" style="font-size:25px;margin-top:.5cm">
+						Hi, I'm Jiwon.
 					</p>
-				<p class="lead text-center" style="font-size:23px">
-						I'm a graduate student researching data science and business strategies at Yonsei University
+				<p class="lead text-center" style="font-size:25px">
+						I'm a graduate student researching data science and business at Yonsei University.
 					</p>
-				<p class="lead text-center" style="font-size:23px">
+				<p class="lead text-center" style="font-size:25px">
+						Besides studying, I'm a travel lover, a bookworm and a health-living advocate.
+					</p>
+				<p class="lead text-center" style="font-size:25px">
 						I love traveling🌎, books📚,
 					</p>
-				<p class="lead text-center" style="font-size:23px">
+				<p class="lead text-center" style="font-size:25px">
 						music🎧, art gallery🎨, and regular gym workout💪
 					</p>
-				<p class="lead text-center" style="font-size:23px;margin-bottom:1cm">
+				<p class="lead text-center" style="font-size:25px">
 					 Feel free to contact me!
+					</p>
+				<p class="lead text-center" style="font-size:25px;margin-bottom:2cm">
+					 You'd find interesting stories more from me 😉
 					</p>
 				<center>
 					<img src="images/prague.jpg" alt="prague" style="margin-bottom:5cm">
