--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
 
 				<div class="dl cv col-lg-3 col-md-4 col-sm-6 portfolio-item">
 					<div class="card h-100">
+						<a href="https://drive.google.com/open?id=1NZ7DESxk2QWhWprcv5n5ZWlmr8x5J4DI">
 							<img class="card-img-top" src="images/icons/junx.jpg" alt="junx">
+						</a>
 						<div class="card-body">
 							<h4 class="card-title">
 								<center>
