--- a/index.html
+++ b/index.html
@@ -108,6 +108,36 @@
 
 			<div class="projectContainer row">
 
+				<div class="blog col-lg-3 col-md-4 col-sm-6 portfolio-item">
+					<div class="card h-100">
+							<img class="card-img-top" src="images/icons/junx.jpg" alt="junx">
+						<div class="card-body">
+							<h4 class="card-title">
+								<center>
+									<h4 class="card-title">Hackathon! Get Ready with me</h4>
+								</center>
+							</h4>
+							<center>
+								<p class="card-text">sharing experience</p>
+							</center>
+							<br>
+							<ul style="list-style-type:square; text-align:left;">
+									<li>Blog Post</li>
+									<li>Date : Jun 2019</li>
+							</ul>
+							<br>
+
+							<div class="link_button">
+								<a href="https://towardsdatascience.com/hackathon-get-ready-with-me-3192c7690cb7">
+									<center>
+										<img class="img-fluid rounded mb-3 mb-md-0" src="images/icons/medium.png" alt="Medium" width="120" height="40">
+									</center>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
 				<div class="ml col-lg-3 col-md-4 col-sm-6 portfolio-item">
 					<div class="card h-100">
 							<img class="card-img-top" src="images/icons/tmdb.png" alt="tmdb">
@@ -142,7 +172,7 @@
 				<div class="dl cv col-lg-3 col-md-4 col-sm-6 portfolio-item">
 					<div class="card h-100">
 						<a href="https://drive.google.com/open?id=1NZ7DESxk2QWhWprcv5n5ZWlmr8x5J4DI">
-							<img class="card-img-top" src="images/icons/junx.jpg" alt="junx">
+							<img class="card-img-top" src="images/icons/skana.png" alt="skana">
 						</a>
 						<div class="card-body">
 							<h4 class="card-title">
@@ -315,7 +345,7 @@
 									</center>
 									<br>
 									<ul style="list-style-type:square; text-align:left;">
-											<li>Medium</li>
+											<li>Blog Post</li>
 											<li>Date : Jan 2019</li>
 									</ul>
 									<br>
