icon update/resume embed

--- a/resume.html
+++ b/resume.html
@@ -48,66 +48,28 @@
 			  		<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
 				  			<a class="nav-link" href="/">Portfolio</a>
-						<li class="nav-item active">
-				  			<a class="nav-link" href="/contact">About Me</a>
 						<li class="nav-item">
+				  			<a class="nav-link" href="/contact">About Me</a>
+						<li class="nav-item active">
 							<a class="nav-link" href="/resume">Résumé</a>
-							<!-- <a class="nav-link" href="https://docs.google.com/document/d/1AIg9H5UnEmksbKUfNINtiDtYF1uPelRVu4ir07Gg244/edit?usp=sharing">Résumé</a> -->
-						</li>
+						<!-- <li class="nav-item">
+							<a class="nav-link" href="https://docs.google.com/document/d/1AIg9H5UnEmksbKUfNINtiDtYF1uPelRVu4ir07Gg244/edit?usp=sharing">Resume</a>
+						</li> -->
 			  		</ul>
 				</div>
 		  	</div>
 	  	</nav>
 
 		<div class="container" align="center">
-			<h1 class="my-4">Jiwon Jeong
+			<h1 class="my-4">Résumé
 			</h1>
 			<div align="center">
-				<!-- <p class="lead text-center">Feel free to reach me</p> -->
-				<a class='icon icon-email' target="_blank" href="mailto:jiwon.j306@gmail.com">
-					<i class="fab fa-google", style = "font-size:53px"></i>
+				<a>
+				<embed src="resume.pdf" type = 'application/pdf' style = "width:800;height:600;border:0;margin-bottom:5cm"></embed>
 				</a>
-				<a class='icon' target="_blank" href="https://twitter.com/jjone_36">
-					<i class="fab fa-twitter", style = "font-size:53px"></i>
-				</a>
-				<a class='icon' target="_blank" href="https://github.com/jjone36">
-					<i class="fab fa-github", style = "font-size:53px"></i>
-				</a>
-				<a class='icon' target="_blank" href="https://www.instagram.com/jjone36/">
-					<i class="fab fa-instagram", style = "font-size:53px"></i>
-	 			</a>
-				<a class='icon' target="_blank" href="https://www.linkedin.com/in/jiwon-jeong/">
-					<i class="fab fa-linkedin", style = "font-size:53px"></i>
-				</a>
-
-				<br>
-				<br>
-				<p class="lead text-center" style="font-size:25px;margin-top:.5cm">
-						Hi, I'm Jiwon.
-					</p>
-				<p class="lead text-center" style="font-size:25px">
-						I'm a graduate student researching Data Science at Yonsei University.
-					</p>
-				<p class="lead text-center" style="font-size:25px">
-						Besides studying, I'm a travel lover, a bookworm and a health-living advocate.
-					</p>
-				<!-- <p class="lead text-center" style="font-size:25px">
-						I love traveling🌎, books📚, music🎧, art gallery🎨, and regular gym workout💪
-					</p> -->
-				<p class="lead text-center" style="font-size:25px">
-					 Feel free to contact me!
-					</p>
-				<p class="lead text-center" style="font-size:25px;margin-bottom:2cm">
-					 You'll find interesting stories more from me 😉
-					</p>
-				<!-- <center>
-					<img src="images/prague.jpg" alt="prague" style="margin-bottom:5cm">
-				</center> -->
-
-				<br>
-				<br>
 			</div>
 		</div>
+
 
 		<div class="fixed-bottom">
 			<div class="footer-bottom">
