--- a/resume.html
+++ b/resume.html
@@ -65,7 +65,7 @@
 			</h1>
 			<div align="center">
 				<a>
-				<embed src="resume.pdf" type = 'application/pdf' style = "width:100%;height:100%;border:0;margin-bottom:5cm"></embed>
+				<embed src="resume.pdf" type = 'application/pdf' style = "width:100%;height:500px;border:0;margin-bottom:3cm"></embed>
 				</a>
 			</div>
 		</div>
