--- a/resume.html
+++ b/resume.html
@@ -61,11 +61,32 @@
 	  	</nav>
 
 		<div class="container" align="center">
-			<h1 class="my-4">Résumé
+			<h1 class="my-4">Jiwon Jeong
 			</h1>
 			<div align="center">
+				<a class='icon icon-email' target="_blank" href="mailto:jiwon.j306@gmail.com">
+					<i class="fab fa-google", style = "font-size:53px"></i>
+				</a>
+				<a class='icon' target="_blank" href="https://twitter.com/jjone_36">
+					<i class="fab fa-twitter", style = "font-size:53px"></i>
+				</a>
+				<a class='icon' target="_blank" href="https://github.com/jjone36">
+					<i class="fab fa-github", style = "font-size:53px"></i>
+				</a>
+				<a class='icon' target="_blank" href="https://www.instagram.com/jjone36/">
+					<i class="fab fa-instagram", style = "font-size:53px"></i>
+				</a>
+				<a class='icon' target="_blank" href="https://www.linkedin.com/in/jiwon-jeong/">
+					<i class="fab fa-linkedin", style = "font-size:53px"></i>
+				</a>
+				<br>
+				<p class="lead text-center" style="font-size:25px;margin-top:.5cm">Feel free to reach me!</p>
+				<br>
+			</div>
+
+			<div align="center">
 				<a>
-				<embed src="images/resume.pdf#toolbar=0&navpanes=0&scrollbar=0" type = 'application/pdf' style = "width:100%;height:1000px;border:0;margin-bottom:5cm;pointer-events:none"></embed>
+				<embed src="images/resume.pdf#toolbar=0&navpanes=0&scrollbar=0" type = 'application/pdf' style = "width:800px;height:1000px;border:0;margin-bottom:5cm;pointer-events:none"></embed>
 				</a>
 			</div>
 		</div>
