--- a/resume.html
+++ b/resume.html
@@ -86,7 +86,7 @@
 
 			<div align="center">
 				<a>
-				<embed src="images/resume.pdf#toolbar=0&navpanes=0&scrollbar=0" type = 'application/pdf' style = "width:800px;height:1000px;border:0;margin-bottom:5cm;pointer-events:none"></embed>
+				<embed src="images/resume.pdf#toolbar=0&navpanes=0&scrollbar=0" type = 'application/pdf' style = "width:800px;height:1000px;border:0;margin-bottom:5cm"></embed>
 				</a>
 			</div>
 		</div>
